# name: test_fake[uvloop]
  <class 'dict'> {
    'id': 'bf1b993c',
    'name': 'musicians',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'users': <class 'list'> [
    ],
  }
---
# name: test_fake[uvloop].1
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'laura56',
    'id': 'fb085f7f',
    'last_password_change': <class 'datetime'>,
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: test_fake[uvloop].2
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'bf1b993c',
        'name': 'musicians',
      },
    ],
    'handle': 'sjohnson',
    'id': '7cf872dc',
    'last_password_change': <class 'datetime'>,
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: test_fake[uvloop][job]
  <class 'dict'> {
    'acquired': False,
    'archived': False,
    'args': <class 'dict'> {
      'age': 'tphorteObohEsZgfLWqS',
      'beat': -72199579.2991181,
      'face': -5262745923324.53,
      'local': 'ufCpVOLlelZEijfQSbBN',
      'product': 'SgBHsToacJDXWVcMKILU',
      'white': 'fVyRYryKwpMUVGtYHdeM',
    },
    'created_at': <class 'datetime'>,
    'id': '3cbb22cc',
    'ping': None,
    'progress': 0,
    'rights': <class 'dict'> {
    },
    'stage': None,
    'state': <JobState.WAITING: 'waiting'>,
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': <JobState.WAITING: 'waiting'>,
        'step_description': None,
        'step_name': None,
        'timestamp': <class 'datetime'>,
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'laura56',
      'id': 'fb085f7f',
    },
    'workflow': 'jobs_aodp',
  }
---
